force-app/main/default/objects/vlocity_ins__FinancialAccount__c/vlocity_ins__FinancialAccount__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Use Asset (or Salesforce Financial Service Cloud) instead. Financial accounts managed by an insurance carrier or investment house. May represent financial accounts created from enrollment in a retirement plan or financial accounts associated with a whole life policy or annuity. Master-detail child object of Account.</description>
    <label>Financial Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>