force-app/main/default/objects/vlocity_ins__FinancialAccount__c/fields/vlocity_ins__BenefitPlanId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BenefitPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the benefit plan on which this financial account is based.</description>
    <label>Plan</label>
    <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>FinancialAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>