force-app/main/default/objects/vlocity_ins__FinancialAccount__c/fields/vlocity_ins__PolicyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For financial accounts tied to an insurance offering, such as an annuity, this identifies the annuity or policy to which this financial account is tied.</description>
    <label>Policy</label>
    <referenceTo>vlocity_ins__Policy__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>FinancialAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>