force-app/main/default/objects/vlocity_ins__FinancialAccount__c/fields/vlocity_ins__TotalValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TotalValue__c</fullName>
    <description>For investment accounts, the current total value of all holdings.</description>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>